# CEDICA-Proyecto-De-Software

./: .gitignore  README.md
admin/: .gitignore  pyproject.toml
admin/src/core/: database.py  functions.py  seeds.py
admin/src/core/charges/: __init__.py  charge.py
admin/src/core/contacts/: __init__.py  contacts.py
admin/src/core/ecuestre/: __init__.py  horse.py  horse_document.py
admin/src/core/payments/: __init__.py  payments.py
admin/src/core/pending_users/: __init__.py  pending_user.py
admin/src/core/publications/: __init__.py  publication.py
admin/src/core/reports/: graphics.py  reports.py
admin/src/core/riders/: __init__.py  benefits.py  disability.py  institutional_work.py  insurance.py  rider.py  rider_document.py  rider_tutor.py  school.py  tutor.py
admin/src/core/team/: __init__.py  employee.py  employee_document.py
admin/src/core/users/: __init__.py  permission.py  role.py  user.py
admin/src/web/: __init__.py  commands.py  config.py  google_client.py  routes.py  storage.py
admin/src/web/api/: __init__.py  messages.py  publications.py
admin/src/web/controllers/: auth.py  charges.py  contacts.py  disabilities.py  equestrian.py  equestrian_dashboard.py  equestrian_details.py  graphics.py  institutional_works.py  insurance_and_schools.py  payments.py  pending_users.py  publication.py  publication_dashboard.py  publication_details.py  team.py  (+7 more)
admin/static/: error.css  flash.css  google.css  style.css
admin/static/scripts/: date-validators.js  disability.js  file-titles.js  institutional-work.js  no-blank-pass.js  pagination.js  tutor.js
(+98 files in other folders)
