[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Migue Miesion <miguelmiesion@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
sqlalchemy = "^2.0.35"
minio = "^7.2.9"
ulid = "^1.1"
requests = "^2.32.3"
pyopenssl = "^24.2.1"
oauthlib = "^3.2.2"
fpdf2 = "^2.8.1"
matplotlib = "^3.9.2"
marshmallow = "^3.23.1"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
